--- a/XTS/raw-xts-api-demo/pom.xml
+++ b/XTS/raw-xts-api-demo/pom.xml
@@ -23,7 +23,51 @@
     <version>5.3.3.Final-SNAPSHOT</version>
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
-    <url>http://www.jboss.org/narayana/</url>
+    <url>http://narayana.io</url>
+
+    <properties>
+        <version.narayana>${project.version}</version.narayana>
+        <version.javaee>7.0</version.javaee>
+        <version.arquillian>1.1.11.Final</version.arquillian>
+        <version.arquillian.graphene>2.0.3.Final</version.arquillian.graphene>
+        <version.arquillian.wildfly>1.1.0.Final</version.arquillian.wildfly>
+        <version.junit>4.12</version.junit>
+        <version.ear.plugin>2.10.1</version.ear.plugin>
+        <version.wildfly.plugin>1.0.2.Final</version.wildfly.plugin>
+        <version.lifecycle.mapping.plugin>1.0.0</version.lifecycle.mapping.plugin>
+        <version.compiler.plugin>3.5.1</version.compiler.plugin>
+        <version.clear.plugin>3.0.0</version.clear.plugin>
+        <version.surefire.plugin>2.19.1</version.surefire.plugin>
+        <version.war.plugin>2.6</version.war.plugin>
+    </properties>
+
+    <repositories>
+        <repository>
+            <id>jboss-public-repository-group</id>
+            <name>JBoss Public Maven Repository Group</name>
+            <url>https://repository.jboss.org/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>jboss-public-repository-group</id>
+            <name>JBoss Public Repository Group</name>
+            <url>http://repository.jboss.org/nexus/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
     <modules>
         <module>core</module>
