--- a/XTS/raw-xts-api-demo/webservices/pom.xml
+++ b/XTS/raw-xts-api-demo/webservices/pom.xml
@@ -7,7 +7,6 @@
         <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
         <artifactId>xts-demo-all</artifactId>
         <version>5.3.3.Final-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -27,7 +26,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.1.1</version>
+                <version>${version.war.plugin}</version>
                 <configuration>
                     <archive>
                         <manifestEntries>
