--- a/jta-and-hibernate/pom.xml
+++ b/jta-and-hibernate/pom.xml
@@ -47,6 +47,8 @@
         <version.weld>2.3.4.Final</version.weld>
         <version.jboss-transaction-spi>7.3.1.Final</version.jboss-transaction-spi>
         <version.log4j>1.2.17</version.log4j>
+        <version.mockito>1.10.19</version.mockito>
+        <version.byteman>3.0.3</version.byteman>
     </properties>
 
     <repositories>
@@ -125,6 +127,43 @@
             <artifactId>junit</artifactId>
             <version>${version.junit}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${version.mockito}</version>
+            <scope>test</scope>
+            <exclusions>
+                <!-- JUnit already comes with Hamcrest -->
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.byteman</groupId>
+            <artifactId>byteman</artifactId>
+            <scope>test</scope>
+            <version>${version.byteman}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.byteman</groupId>
+            <artifactId>byteman-submit</artifactId>
+            <scope>test</scope>
+            <version>${version.byteman}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.byteman</groupId>
+            <artifactId>byteman-install</artifactId>
+            <scope>test</scope>
+            <version>${version.byteman}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.byteman</groupId>
+            <artifactId>byteman-bmunit</artifactId>
+            <scope>test</scope>
+            <version>${version.byteman}</version>
         </dependency>
     </dependencies>
 
