Ignore wildfly zip and extraction

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ jbossesb-4.9.zip
 instantclient-basiclite-win32-11.2.0.1.0.zip
 instantclient-sdk-win32-11.2.0.1.0.zip
 *~
+wildfly-10.1.0.Final-SNAPSHOT.jar
+wildfly-10.1.0.Final-SNAPSHOT/
+wildfly-10.x.zip
