--- a/ArjunaJTS/standalone/pom.xml
+++ b/ArjunaJTS/standalone/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>org.jboss.narayana.quickstart.jts</groupId>
     <artifactId>standalone</artifactId>
-    <version>5.3.3.Final</version>
+    <version>5.3.4.Final-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Standalone JTS Transaction Example</name>
     <description>Standalone JTS Transaction Example</description>
@@ -35,7 +35,7 @@
     </licenses>
 
     <properties>
-      <version.narayana>5.3.3.Final</version.narayana>
+      <version.narayana>5.3.4.Final-SNAPSHOT</version.narayana>
     </properties>
 
     <repositories>
