--- a/compensating-transactions/mongodb-simple/pom.xml
+++ b/compensating-transactions/mongodb-simple/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>org.jboss.narayana.quickstart.compensations.mongodb-simple</groupId>
     <artifactId>mongodb-simple-all</artifactId>
-    <version>5.3.3.Final</version>
+    <version>5.3.4.Final-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>JBoss Narayana Quickstarts: A simple example of using compensation-based transactions with MongoDB</name>
     <description>JBoss Narayana Quickstarts: A simple example of using compensation-based transactions with MongoDB
@@ -31,7 +31,7 @@
         <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered
   resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.narayana>5.3.3.Final</version.narayana>
+        <version.narayana>5.3.4.Final-SNAPSHOT</version.narayana>
         <version.org.wildfly.arquillian>1.0.1.Final</version.org.wildfly.arquillian>
         <ipv6.server.jvm.args>-Djboss.bind.address=[::1] -Djboss.bind.address.management=[::1] -Djboss.bind.address.unsecure=[::1] -Djava.net.preferIPv4Stack=false -Djava.net.preferIPv6Addresses=true</ipv6.server.jvm.args>
         <jvm.args.memory>-Xms64m -Xmx1024m -XX:MaxPermSize=512m</jvm.args.memory>
