--- a/jca-and-hibernate/pom.xml
+++ b/jca-and-hibernate/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>org.jboss.narayana.quickstarts</groupId>
     <artifactId>jca-and-hibernate</artifactId>
-    <version>5.3.3.Final</version>
+    <version>5.3.4.Final-SNAPSHOT</version>
 
     <name>Narayana Quickstarts: JBTM, IronJacamar, and Hibernate</name>
     <description>JBTM, IronJacamar and Hibernate example</description>
@@ -43,7 +43,7 @@
         <version.org.hibernate>4.2.7.SP1</version.org.hibernate>
         <version.org.hibernate.hibernate-validator>5.0.1.Final</version.org.hibernate.hibernate-validator>
         <version.org.jboss.jboss-common-core>2.2.17.GA</version.org.jboss.jboss-common-core>
-        <version.narayana>5.3.3.Final</version.narayana>
+        <version.narayana>5.3.4.Final-SNAPSHOT</version.narayana>
         <version.org.jboss.logging.jboss-logging>3.1.2.GA</version.org.jboss.logging.jboss-logging>
         <version.org.jboss.logging.jboss-logging-spi>2.2.0.CR1</version.org.jboss.logging.jboss-logging-spi>
         <version.org.jboss.logmanager-jboss-logmanager>1.4.0.Final</version.org.jboss.logmanager-jboss-logmanager>
