--- a/rts/at/recovery/recovery1/pom.xml
+++ b/rts/at/recovery/recovery1/pom.xml
@@ -41,6 +41,13 @@
             <artifactId>restat-util</artifactId>
             <version>${version.narayana}</version>
         </dependency>
+        <!-- include resteasy since it provide some utility methods for manipulating HTTP headers -->
+        <dependency>
+          <groupId>org.jboss.resteasy</groupId>
+          <artifactId>resteasy-jaxrs</artifactId>
+          <version>3.0.16.Final</version>
+        </dependency>
+
         <dependency>
             <groupId>org.jboss.logging</groupId>
             <artifactId>jboss-logging</artifactId>
