--- a/rts/at/simple/pom.xml
+++ b/rts/at/simple/pom.xml
@@ -49,23 +49,32 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
         <version>1.2</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>exec</goal>
-            </goals>
-          </execution>
-        </executions>
         <configuration>
           <executable>java</executable>
           <mainClass>MultipleTransactions</mainClass>
-          <workingDirectory>${project.build.directory}/exec-working-directory</workingDirectory>
           <arguments>
-            <!--argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=8788</argument-->
             <argument>coordinator=http://localhost:8080/rest-at-coordinator/tx/transaction-manager</argument>
           </arguments>
         </configuration>
       </plugin>
+<!--
+      <plugin>
+        <artifactId>exec-maven-plugin</artifactId>
+        <groupId>org.codehaus.mojo</groupId>
+        <executions>
+          <execution>
+            <id>Execute Run Scripts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <executable>${basedir}/run.sh</executable>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+-->
     </plugins>
   </build>
   <dependencies>
@@ -74,6 +83,13 @@
       <artifactId>restat-util</artifactId>
       <version>${version.narayana}</version>
     </dependency>
+    <!-- include resteasy since it provide some utility methods for manipulating HTTP headers -->
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-jaxrs</artifactId>
+      <version>3.0.16.Final</version>
+    </dependency>
+
     <!-- JBoss logging -->
     <dependency>
       <groupId>org.jboss.logging</groupId>
