--- a/rts/at/undertow/pom.xml
+++ b/rts/at/undertow/pom.xml
@@ -58,6 +58,11 @@
             <version>${version.narayana}</version>
         </dependency>
         <dependency>
+          <groupId>org.jboss.resteasy</groupId>
+          <artifactId>resteasy-jaxrs</artifactId>
+          <version>3.0.16.Final</version>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.narayana.arjunacore</groupId>
             <artifactId>arjunacore</artifactId>
             <version>${version.narayana}</version>
