--- a/at/util/pom.xml
+++ b/at/util/pom.xml
@@ -76,9 +76,9 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jboss.resteasy</groupId>
-      <artifactId>jaxrs-api</artifactId>
-      <version>${version.org.jboss.resteasy}</version>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>${version.javax.ws.rs-api}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
