--- a/ArjunaJTA/pom.xml
+++ b/ArjunaJTA/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.jboss.narayana.quickstart.jta</groupId>
   <artifactId>quickstarts</artifactId>
-  <version>5.3.4.Final</version>
+  <version>5.3.5.Final-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>JBoss JTA Examples</name>
   <description>All quickstarts of JBoss JTA</description>
@@ -22,7 +22,7 @@
   </repositories>
   <properties>
     <version.surefire.plugin>2.19.1</version.surefire.plugin>
-    <version.narayana>5.3.4.Final</version.narayana>
+    <version.narayana>5.3.5.Final-SNAPSHOT</version.narayana>
   </properties>
   <build>
     <pluginManagement>
