--- a/XTS/raw-xts-api-demo/ear/pom.xml
+++ b/XTS/raw-xts-api-demo/ear/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstarts.xts.demo</groupId>
         <artifactId>xts-demo-all</artifactId>
-        <version>5.3.4.Final</version>
+        <version>5.3.5.Final-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>xts-demo-ear</artifactId>
