--- a/rts/at/jta-service/jms/pom.xml
+++ b/rts/at/jta-service/jms/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.jboss.narayana.quickstart.rts</groupId>
         <artifactId>restat-bridge</artifactId>
-        <version>5.2.18.Final-SNAPSHOT</version>
+        <version>5.2.18.Final</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -45,7 +45,7 @@
       <jvm.args.debug></jvm.args.debug>
       <jvm.args.other>-server</jvm.args.other>
       <version.surefire.plugin>2.19.1</version.surefire.plugin>
-      <version.narayana>5.2.18.Final-SNAPSHOT</version.narayana>
+      <version.narayana>5.2.18.Final</version.narayana>
     </properties>
 
     <repositories>
