Narayana Spring Boot stock market quickstart

--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -37,5 +37,6 @@
     <modules>
         <module>jta</module>
         <module>narayana-spring-boot</module>
+        <module>stock-market-with-narayana-spring-boot</module>
     </modules>
 </project>
