JBTM-2685 JDK9 work

--- a/at/util/pom.xml
+++ b/at/util/pom.xml
@@ -134,6 +134,24 @@
     </plugins>
   </build>
   <profiles>
+    <profile>
+        <id>release-9</id>
+        <build>
+          <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-install-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>default-install</id>
+                <phase>install</phase>
+              </execution>
+            </executions>
+            <inherited>false</inherited>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
       <profile>
           <id>release</id>
           <build>
@@ -163,6 +181,7 @@
             </executions>
             <configuration>
               <detectOfflineLinks>false</detectOfflineLinks>
+              <failOnError>false</failOnError>
             </configuration>
           </plugin>
         </plugins>
