--- a/at/tx/pom.xml
+++ b/at/tx/pom.xml
@@ -334,6 +334,24 @@
         </build>
     </profile>
     <profile>
+        <id>release-9</id>
+        <build>
+          <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-install-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>default-install</id>
+                <phase>install</phase>
+              </execution>
+            </executions>
+            <inherited>false</inherited>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
         <id>release</id>
         <build>
             <plugins>
@@ -372,29 +390,9 @@
         <activation>
           <jdk>[1.9,)</jdk>
         </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <executions>
-              <execution>
-                <id>default-test</id>
-                <phase>test</phase>
-                <goals>
-                  <goal>test</goal>
-                </goals>
-                <configuration combine.self="override">
-                  <forkMode>pertest</forkMode>
-                  <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                  <systemProperties combine.children="append" />
-                  <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
+        <properties>
+          <jvm.args.jdk9>--add-opens=java.base/java.lang=ALL-UNNAMED</jvm.args.jdk9>
+        </properties>
     </profile>
   </profiles>
 </project>
