--- a/blacktie/jatmibroker-xatmi/mdb-xatmi-service/pom.xml
+++ b/blacktie/jatmibroker-xatmi/mdb-xatmi-service/pom.xml
@@ -16,12 +16,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.narayana.blacktie.quickstarts</groupId>
 	<artifactId>blacktie-quickstarts-mdb-xatmi-service</artifactId>
-	<version>5.5.3.Final</version>
+	<version>5.5.4.Final-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<description>A BlackTie component</description>
 	<name>Blacktie XATMI MDB Quickstart</name>
         <properties>
-            <version.narayana>5.5.3.Final</version.narayana>
+            <version.narayana>5.5.4.Final-SNAPSHOT</version.narayana>
         </properties>
 	<repositories>
 		<repository>
