JBTM-2874 Test GlassFish <-> WildFly interop

--- a/ArjunaJTS/pom.xml
+++ b/ArjunaJTS/pom.xml
@@ -128,8 +128,11 @@
     </dependency>
   </dependencies>
   <modules>
+<!--
     <module>trailmap</module>
     <module>recovery</module>
     <module>standalone</module>
+-->
+    <module>interop</module>
   </modules>
 </project>
