Updated to 5.5.6.Final

--- a/ArjunaJTA/jee_transactional_app/pom.xml
+++ b/ArjunaJTA/jee_transactional_app/pom.xml
@@ -15,7 +15,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jboss.narayana.quickstart.rts</groupId>
     <artifactId>jee_transactional_app</artifactId>
-    <version>5.5.6.Final-SNAPSHOT</version>
+    <version>5.5.6.Final</version>
     <name>basic integration example</name>
     <description>basic integration example</description>
     <packaging>war</packaging>
@@ -35,7 +35,7 @@
             to work with JBoss EAP 6. It requires you have access to the JBoss EAP 6 
             maven repository. -->
         <!-- <version.org.jboss.bom>1.0.0.Final-redhat-1</version.org.jboss.bom>> -->
-        <version.narayana>5.5.6.Final-SNAPSHOT</version.narayana>
+        <version.narayana>5.5.6.Final</version.narayana>
         <!-- other plugin versions -->
         <version.compiler.plugin>2.3.1</version.compiler.plugin>
         <version.surefire.plugin>2.19.1</version.surefire.plugin>
