--- a/rts/at/demo/pom.xml
+++ b/rts/at/demo/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>restat-quickstarts</artifactId>
     <groupId>org.jboss.narayana.quickstart.rts</groupId>
-    <version>5.2.24.Final-SNAPSHOT</version>
+    <version>5.2.24.Final</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <packaging>war</packaging>
@@ -14,7 +14,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
-    <version.narayana>5.2.24.Final-SNAPSHOT</version.narayana>
+    <version.narayana>5.2.24.Final</version.narayana>
   </properties>
 
   <repositories>
