JBTM-1820 The quickstart to show use the camel with the narayana in the Spring Boot

--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -38,5 +38,6 @@
         <module>jta</module>
         <module>narayana-spring-boot</module>
         <module>stock-market-with-narayana-spring-boot</module>
+        <module>camel-with-narayana-spring-boot</module>
     </modules>
 </project>
